* Function Adjust() for Quality&4==0 now show image in widgets even if draw function is absent (i.e. =NULL).
* Allow reading JPEG files for mglData::Import().

* Rearrange tool buttons in UDAV
* Add features for manual dashing and manual mask in Style dialog
* Add dialog for new dialog for new inplots (including subplot, multiplot, columnplot, stickplot, gridplot)
* Add new primitives (arc,polygon,rotated text) as mouse handled ones in UDAV
* Add close button to data tabs in UDAV
* Allow to delete/hide/unhide selected plot
* Allow to move selected plot between inplots
* Improve NewCommand dialog in UDAV. Now it replace the script command if user change arguments only.
* Update UDAV icons to use Oxygen ones

2.2.2.1 Released 19 March 2014

* Compatibility changes for MS VisualStudio 2010 and early.
* Function SetRange(v1,v2) ignore NAN values now.
* Add enable-json-sample for building json-samples on demand only.
* Update docs.


2.2.2 Released 10 March 2014

* Add mgl_region_3d() to draw region (or ribbon) between 2 curves. Correspondingly extend mglGraph::Region() function and MGL command 'region'.
* Allow LGPL for MathGL widgets.
* Improve export to TeX.
* Add missing functions to Fortran interface.
* Bugfix for legend with enabled lighting.
* Minor bugfixes and memory leaks.


2.2.1 Released 22 January 2014

* Add Qt5 support.
* Add Pascal interface.
* Improve JavaScript interface.
* Add function AddRange(char dir, mreal v1, mreal v2) and extend corresponding MGL commands '[xyzc]range'.
* Add 'hypot' function for known functions in formula parsing.
* Add style '~' to disable colorbar or axis labels. NOTE, axis style '_' is obsolete and should be replaced by '~'.
* Change Aspect() if Ax=NAN. Now, Ay and Az set the ratio to optimal aspect (not exact value as previously).
* Disable changes by View(),Zoom(),Perspective() for position of Title(), Legend(), Colorbar().
* Partial support of perspective in CalcXYZ().
* Speed up PDE solving.