@@ -44,6 +44,7 @@
 
 extern bool mglAutoSave;
 extern bool mglHighlight;
+extern bool mglDotsRefr;
 extern mglParse parser;
 int animDelay=500;
 void raisePanel(QWidget *w);
@@ -101,6 +102,7 @@ void PlotPanel::stop()	{	parser.Stop();	mgl->stop();	}
 void PlotPanel::execute()
 {
 	if(mglAutoSave)	save();
+	mgl->setDotsPreview(mglDotsRefr);
 	raisePanel(this);
 	objId = subId = -1;
 	emit clearWarn();
@@ -350,11 +352,11 @@ void PlotPanel::toolTop(QBoxLayout *l)
 	a->setToolTip(tr("Restore status for 'once' command and reload data (F9)."));
 	a->setShortcut(Qt::Key_F9);	o->addAction(a);	popup->addAction(a);
 
-	a = new QAction(QPixmap(":/png/process-stop.png"), tr("Stop"), this);
+/*	a = new QAction(QPixmap(":/png/process-stop.png"), tr("Stop"), this);
 	connect(a, SIGNAL(triggered()), this, SLOT(stop()));
 	a->setToolTip(tr("Stop script execution (F7)."));
 	a->setShortcut(Qt::Key_F7);	o->addAction(a);
-	bb = new QToolButton(this);	l->addWidget(bb);	bb->setDefaultAction(a);
+	bb = new QToolButton(this);	l->addWidget(bb);	bb->setDefaultAction(a);*/
 
 	a = new QAction(QPixmap(":/png/edit-copy.png"), tr("Copy plot"), this);
 	connect(a, SIGNAL(triggered()), mgl, SLOT(copy()));
@@ -655,7 +657,7 @@ void PlotPanel::movePlotUp()
 		QString s = tc.selectedText();
 		tc.deleteChar();
 		bool ins=true;
-		
+
 		while(tc.movePosition(QTextCursor::PreviousBlock))
 		{
 			QString q = tc.block().text();
@@ -687,7 +689,7 @@ void PlotPanel::movePlotDown()
 		if(curPos==0)	s = "\n"+s;
 		tc.deleteChar();
 		bool ins=true;
-		
+
 		while(tc.movePosition(QTextCursor::NextBlock))
 		{
 			QString q = tc.block().text();
